[package]
edition = "2018"
name = "a2020"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]

[dependencies]
nom = "6.2.1"
num = "0.4.0"
num-integer = "0.1.41"
rand = "0.8.1"
lowdim = { path = "../../lowdim", version = "0.2.0" }
modulo = { path = "../../math/jmath-modulo", version = "0.1.0", package="jmath-modulo" }
