[package]
edition = "2021"
name = "a2020"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
license = "MIT OR Apache-2.0"

[dependencies]
nom = "7.0.0"
num = "0.4.0"
num-integer = "0.1.44"
rand = "0.8.4"
lowdim = "0.6.0"
modulo = { path = "../../math/jmath-modulo", version = "0.1.0", package="jmath-modulo" }
